--- a/sw/templates/dashboard/index.html
+++ b/sw/templates/dashboard/index.html
@@ -5,6 +5,8 @@
 
 {% block page_title %}HQ{% endblock %}
 
+{% block body_class %}{{ block.super }} hq-section{% endblock %}
+
 {% block breadcrumbs %}
     {{ block.super }}
 {% endblock %}
