Add Django Admin link for those signed in as staff.

--- a/sw/templates/base/auth_bar_signedin.html
+++ b/sw/templates/base/auth_bar_signedin.html
@@ -1,5 +1,8 @@
 {% load feature_tag %}
 <span>Signed in as {{ user.get_profile }}.</span>
 <span id="labs-link" class="icon-link"><a href="{% url featurelabs_index %}"><span>Labs</span></a></span>
+{% if user.is_staff %}
+    <span><a href="/admin/"><span>Django Admin</span></a></span>
+{% endif %}
 <span><a href="{% url profile_detail username=user.username %}">Your Profile</a></span>
 <span><a href="{% url account_logout %}">Sign Out</a></span>
