Fix up wording on wiki tools sidebar.

--- a/sw/templates/sidebars/wikicommon.html
+++ b/sw/templates/sidebars/wikicommon.html
@@ -3,10 +3,10 @@
 <div class="section">
     <h1>Wiki Tools</h1>
 
-    <p>Here are more tools for this team's wiki:</p>
+    <p>Tools for wiki pages in <em>{{ group.name }}</em>:</p>
 
     <ul>
         <li><a href="{% groupurl wakawaka_index group %}">View and edit the team home page</a></li>
-        <li><a href="{% groupurl wakawaka_page_list group %}">Alphabetical list of pages</a></li>
+        <li><a href="{% groupurl wakawaka_page_list group %}">Alphabetical list of team pages</a></li>
     </ul>
 </div>
