Show links to the wiki from public content if you're logged in and a member of the webcontent team.

--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -405,3 +405,11 @@ ul.socialaccount_providers {
         background: transparent url("/media/socialaccount/facebook.png") left top no-repeat; }
       ul.socialaccount_providers li a.socialaccount_provider.yahoo {
         background: transparent url("/media/socialaccount/yahoo.png") left top no-repeat; }
+
+.wakacms-highlighted {
+  background: #badafa; }
+
+.wakacms-links {
+  background: #ffebcc; }
+  .wakacms-links:hover {
+    background: #ffc671; }
