--- a/sw/templates/base_hq_6_6.html
+++ b/sw/templates/base_hq_6_6.html
@@ -8,7 +8,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb_url 'Home' dashboard_index %}
+    {% breadcrumb_url 'HQ' dashboard_index %}
 {% endblock %}
 
 {% block auth_bar_left %}
