Rename 'wiki' to 'pages' cosmetically.

--- a/sw/templates/wakawaka/base_breadcrumbs.html
+++ b/sw/templates/wakawaka/base_breadcrumbs.html
@@ -9,7 +9,7 @@
     {# {% with groupurl wakawaka_index group as indexurl %} #}
     {#     {% breadcrumb 'Wiki' indexurl %} #}
     {# {% endwith %} #}
-    <li><a href="{% groupurl wakawaka_index group %}">Wiki</a></li>
+    <li><a href="{% groupurl wakawaka_index group %}">Pages</a></li>
 {% else %}
-    {% breadcrumb_url 'Legacy Wiki' wakawaka_index %}
+    {% breadcrumb_url 'Legacy Pages' wakawaka_index %}
 {% endif %}
