--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -175,7 +175,27 @@ div#site-sections {
       color: white;
       background: #0b4f96; }
 
-.hq-section div#site-sections a#hq-link {
+.hq.hq-section div#site-sections a#hq-link {
+  background: #0b4f96;
+  color: white; }
+
+.hq.local-section div#site-sections a#local-link {
+  background: #0b4f96;
+  color: white; }
+
+.hq.statewide-section div#site-sections a#statewide-link {
+  background: #0b4f96;
+  color: white; }
+
+.hq.support-section div#site-sections a#support-link {
+  background: #0b4f96;
+  color: white; }
+
+.hq.friends-section div#site-sections a#friends-link {
+  background: #0b4f96;
+  color: white; }
+
+.hq.coordinators-section div#site-sections a#coordinators-link {
   background: #0b4f96;
   color: white; }
 
