Make sure 'statewide' section stays active when in the state team.

--- a/sw/templates/teams/team.html
+++ b/sw/templates/teams/team.html
@@ -6,6 +6,8 @@
 
 {% block head_title %}{{ group.name }}{% endblock %}
 
+{% block body_class %}{{ block.super }} team-{{ group.slug }}{% endblock %}
+
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb group.name %}
