--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -183,7 +183,7 @@ div#site-sections {
   background: #0b4f96;
   color: white; }
 
-.hq.statewide-section div#site-sections a#statewide-link {
+.hq.team-state div#site-sections a#statewide-link {
   background: #0b4f96;
   color: white; }
 
