--- a/sw/templates/wakawaka/base_breadcrumbs.html
+++ b/sw/templates/wakawaka/base_breadcrumbs.html
@@ -3,9 +3,9 @@
 
 {% if group %}
 
-    {# {% for parent in group.parents %} #}
-    {#     {% breadcrumb_url parent.name teams_team slug=parent.slug %} #}
-    {# {% endfor %} #}
+    {% for parent in group.parents %}
+        {% breadcrumb_url parent.name teams_team slug=parent.slug %}
+    {% endfor %}
     {% breadcrumb_url group.name teams_team slug=group.slug %}
     {# @@@ How can we clean this up for groupurls? #}
     {# The following doesn't work. #}
