--- a/sw/templates/teams/team.html
+++ b/sw/templates/teams/team.html
@@ -48,6 +48,25 @@
 
         {% include "sidebars/teamjoinleave.html" %}
 
+        {% with group.children as children %}
+            <div class="section">
+                <h1>More Teams</h1>
+
+                <ul>
+                    {% if group.parent %}
+                        <li><a href="{% url teams_team slug=group.parent.slug %}">« {{ group.parent.name }}</a></li>
+                    {% else %}
+                        <li><a href="{% url teams_index %}">« All Teams</a></li>
+                    {% endif %}
+                    {% if children %}
+                        {% for child in children %}
+                            <li><a href="{% url teams_team slug=child.slug %}">{{ child.name }} »</a></li>
+                        {% endfor %}
+                    {% endif %}
+                </ul>
+            </div>
+        {% endwith %}
+
         {% include "sidebars/wikicommon.html" %}
 
         <div class="section">
