--- a/sw/templates/wakacmsplugin/wikipagesnippet.html
+++ b/sw/templates/wakacmsplugin/wikipagesnippet.html
@@ -2,7 +2,9 @@
 <div id="wakacms-snippet-{{ snippet.slug|slugify }}-{{ snippet.rev }}">{{ snippet.content|wikify_creole_links:wakacms_snippetgroup|apply_markup:"creole" }}</div>
 {% if is_wakacms_team_member %}
     <p class="wakacms-links" id="wakacms-links-{{ snippet.slug|slugify }}-{{ snippet.rev }}">
-        (Wiki:
+        (Wiki snippet:
+        {{ snippet.slug }}
+        |
         <a href="{% groupurl wakawaka_page wakacms_snippetgroup slug=snippet.slug rev_id=snippet.rev %}">This Rev</a>
         |
         <a href="{% groupurl wakawaka_page wakacms_snippetgroup slug=snippet.slug %}">Latest</a>)
