--- a/sw/templates/teams/team.html
+++ b/sw/templates/teams/team.html
@@ -46,21 +46,9 @@
 {% block sidebar_sections %}
     {% if is_team_member or not group.is_private  %}
 
+        {% include "sidebars/moreteams.html" %}
+
         {% include "sidebars/teamjoinleave.html" %}
-
-        <div class="section">
-            <h1>More Teams</h1>
-
-            <ul>
-                <li><a href="{% url teams_index %}">« All Teams</a></li>
-                {% for parent in group.parents %}
-                    <li><a href="{% url teams_team slug=parent.slug %}">« {{ parent.name }}</a></li>
-                {% endfor %}
-                {% for child in group.children %}
-                    <li><a href="{% url teams_team slug=child.slug %}">{{ child.name }} »</a></li>
-                {% endfor %}
-            </ul>
-        </div>
 
         {% include "sidebars/wikicommon.html" %}
 
