Remove "you are here" after current in More Teams

--- a/sw/templates/sidebars/moreteams.html
+++ b/sw/templates/sidebars/moreteams.html
@@ -6,7 +6,7 @@
         {% for parent in group.parents %}
             <li><a href="{% url teams_team slug=parent.slug %}">« {{ parent.name }}</a></li>
         {% endfor %}
-        <li><strong>{{ group.name }}</strong> (you are here)</li>
+        <li><strong>{{ group.name }}</strong></li>
         {% for child in group.children %}
             <li><a href="{% url teams_team slug=child.slug %}">{{ child.name }} »</a></li>
         {% endfor %}
